Fixed footer positioning (overlapped content)

--- a/general/RMstyle.css
+++ b/general/RMstyle.css
@@ -25,7 +25,8 @@ body {
     font-family: sans-serif;
     margin: 0px;
     position: relative;
-    min-height: calc(100vh - 60px)
+    min-height: calc(100vh - 163px);
+    padding-bottom: 103px;
 }
 
 main {margin: 8px 8px 0px 8px;}
